--- a/index.html
+++ b/index.html
@@ -1,79 +1,167 @@
-// Setup basic express server
-var express = require('express');
-var app = express();
-var server = require('http').createServer(app);
-var io = require('../..')(server);
-var port = process.env.PORT || 3000;
+<!DOCTYPE HTML> 
+<html lang="en"> 
+<head>
+<title>PeerJS chat demo</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+<meta http-equiv="Content-Language" content="en-us"> 
 
-server.listen(port, function () {
-  console.log('Server listening at port %d', port);
+<link href="fancy.css" rel="stylesheet" type="text/css">
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script> 
+<script type="text/javascript" src="http://cdn.peerjs.com/0/peer.js"></script>
+<script>
+// Connect to PeerJS, have server assign an ID instead of providing one
+var connections = {};
+var peer = new Peer({key: '47etzdhjw597ldi', debug: true});
+// Show this peer's ID.
+peer.on('open', function(id){
+  $('#pid').text(id);
 });
-
-// Routing
-app.use(express.static(__dirname + '/public'));
-
-// Chatroom
-
-// usernames which are currently connected to the chat
-var usernames = {};
-var numUsers = 0;
-
-io.on('connection', function (socket) {
-  var addedUser = false;
-
-  // when the client emits 'new message', this listens and executes
-  socket.on('new message', function (data) {
-    // we tell the client to execute 'new message'
-    socket.broadcast.emit('new message', {
-      username: socket.username,
-      message: data
+// Await connections from others
+peer.on('connection', connect);
+// Handle a connection object.
+function connect(c) {
+  // Handle a chat connection.
+  if (c.label === 'chat') {
+    var chatbox = $('<div></div>').addClass('connection').addClass('active').attr('id', c.peer);
+    var header = $('<h1></h1>').html(c.peer);
+    var messages = $('<div></div>').addClass('messages');
+    chatbox.append(header);
+    chatbox.append(messages);
+    // Select connection handler.
+    chatbox.on('click', function() {
+      if ($(this).attr('class').indexOf('active') === -1) {
+        $(this).addClass('active');
+      } else {
+        $(this).removeClass('active');
+      }
+    });
+    $('.filler').hide();
+    $('#connections').append(chatbox);
+    c.on('data', function(data) {
+      //chatbox.addClass('active');
+      messages.append('<div><span class="peer">' + c.peer + '</span>: ' + data +
+        '</div>');
+        });
+        c.on('close', function() {
+          alert(c.peer + ' has left the chat.');
+          chatbox.remove();
+          if ($('.connection').length === 0) {
+            $('.filler').show();
+          }
+        });
+  } else if (c.label === 'file') {
+    c.on('data', function(data) {
+      $('#' + c.peer).find('.messages').append('<div><span class="file">' +
+          c.peer + ' has sent you a file.</span></div>');
+    });
+  }
+  // Save connection object appropriately.
+  if (!connections[c.peer]) {
+    connections[c.peer] = {};
+  }
+  connections[c.peer][c.label] = c;
+}
+$(document).ready(function() {
+  // Prepare file drop box.
+  var box = $('#box');
+  box.on('dragenter', doNothing);
+  box.on('dragover', doNothing);
+  box.on('drop', function(e){
+    e.originalEvent.preventDefault();
+    var file = e.originalEvent.dataTransfer.files[0];
+    eachActiveConnection(function(c, $c) {
+      if (c.label === 'file') {
+        c.send(file);
+        $c.find('.messages').append('<div><span class="file">You sent a file.</span></div>');
+      }
     });
   });
-
-  // when the client emits 'add user', this listens and executes
-  socket.on('add user', function (username) {
-    // we store the username in the socket session for this client
-    socket.username = username;
-    // add the client's username to the global list
-    usernames[username] = username;
-    ++numUsers;
-    addedUser = true;
-    socket.emit('login', {
-      numUsers: numUsers
+  function doNothing(e){
+    e.preventDefault();
+    e.stopPropagation();
+  }
+  // Connect to a peer
+  $('#connect').click(function() {
+    // Create 2 connections, one labelled chat and another labelled file.
+    var c = peer.connect($('#rid').val(), { label: 'chat' });
+    c.on('open', function() {
+      connect(c);
     });
-    // echo globally (all clients) that a person has connected
-    socket.broadcast.emit('user joined', {
-      username: socket.username,
-      numUsers: numUsers
+    c.on('error', function(err) { alert(err); });
+    var f = peer.connect($('#rid').val(), { reliable: true, label: 'file' });
+    f.on('open', function() {
+      connect(f);
     });
+    f.on('error', function(err) { alert(err); });
   });
-
-  // when the client emits 'typing', we broadcast it to others
-  socket.on('typing', function () {
-    socket.broadcast.emit('typing', {
-      username: socket.username
-    });
-  });
-
-  // when the client emits 'stop typing', we broadcast it to others
-  socket.on('stop typing', function () {
-    socket.broadcast.emit('stop typing', {
-      username: socket.username
+  // Close a connection.
+  $('#close').click(function() {
+    eachActiveConnection(function(c) {
+      c.close();
     });
   });
-
-  // when the user disconnects.. perform this
-  socket.on('disconnect', function () {
-    // remove the username from global usernames list
-    if (addedUser) {
-      delete usernames[socket.username];
-      --numUsers;
-
-      // echo globally that this client has left
-      socket.broadcast.emit('user left', {
-        username: socket.username,
-        numUsers: numUsers
-      });
-    }
+  // Send a chat message to all active connections.
+  $('#send').submit(function(e) {
+    e.preventDefault();
+    // For each active connection, send the message.
+    var msg = $('#text').val();
+    eachActiveConnection(function(c, $c) {
+      if (c.label === 'chat') {
+        c.send(msg);
+        $c.find('.messages').append('<div><span class="you">You: </span>' + msg
+          + '</div>');
+      }
+    });
+    $('#text').val('');
+    $('#text').focus();
   });
+  // Goes through each active peer and calls FN on its connections.
+  function eachActiveConnection(fn) {
+    var actives = $('.active');
+    actives.each(function() {
+      var peerId = $(this).attr('id');
+      var conns = connections[peerId];
+      var labels = Object.keys(conns);
+      for (var i = 0, ii = labels.length; i < ii; i += 1) {
+        var conn = conns[labels[i]];
+        fn(conn, $(this));
+      }
+    });
+  }
+  // Show browser version
+  $('#browsers').text(navigator.userAgent);
 });
+</script>
+</head> 
+ 
+<body> 
+
+  <div id="actions">
+    Your PeerJS ID is <span id="pid"></span><br>
+    Connect to a peer: <input type="text" id="rid" placeholder="Someone else's id"><input class="button" type="button" value="Connect" id="connect"><br><br>
+
+    <form id="send">
+      <input type="text" id="text" placeholder="Enter message"><input class="button" type="submit" value="Send to selected peers">
+    </form>
+    <button id="close">Close selected connections</button>
+  </div>
+
+  <div id="wrap"><div id="connections"><span class="filler">You have not yet
+        made any connections.</span></div>
+    <div class="clear"></div></div>
+
+  <div id="box" style="background: #fff; font-size: 18px;padding:40px 30px; text-align: center;">
+    Drag file here to send to active connections.
+  </div>
+  
+  
+  <div class="warning browser"><div class="important">Your browser version: <span id="browsers"></span><br>
+  Currently <strong>Google Chrome 26.0.1403.0 or above</strong> is required (Dev
+  or Canary channels)</strong></div>For more up to date compatibility
+information see <a href="http://peerjs.com/status">PeerJS WebRTC
+  Status</a><br>Note that this demo may also fail if you are behind
+stringent firewalls or both you and the remote peer and behind symmetric
+NATs.</div>
+</body> 
+</html> 
