--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ peer.on('open', function(id){
 // Await connections from others
 peer.on('connection', connect);
 // Handle a connection object.
+ 
+
+
 function connect(c) {
   // Handle a chat connection.
   if (c.label === 'chat') {
@@ -133,8 +136,45 @@ $(document).ready(function() {
   $('#browsers').text(navigator.userAgent);
 });
 </script>
-</head> 
 
+<button type="button" onclick="myFunction()">Audio Call</button>
+function myFunction(){
+var conn = peer.connect('another-peers-id');
+conn.on('open', function(){
+  conn.send('hi!');
+});
+peer.on('connection', function(conn) {
+  conn.on('data', function(data){
+    // Will print 'hi!'
+    console.log(data);
+  });
+});
+navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
+navigator.getUserMedia({video: true, audio: true}, function(stream) {
+  var call = peer.call('another-peers-id', stream);
+  call.on('stream', function(remoteStream) {
+    // Show stream in some <video> element.
+  });
+}, function(err) {
+  console.log('Failed to get local stream' ,err);
+});
+navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
+peer.on('call', function(call) {
+  navigator.getUserMedia({video: true, audio: true}, function(stream) {
+    call.answer(stream); // Answer the call with an A/V stream.
+    call.on('stream', function(remoteStream) {
+      // Show stream in some <video> element.
+    });
+  }, function(err) {
+    console.log('Failed to get local stream' ,err);
+  });
+});
+
+
+
+}
+</head> 
+ 
 <body> 
 
   <div id="actions">
