--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@ $(document).ready(function() {
   }
   // Show browser version
   $('#browsers').text(navigator.userAgent);
-});<button type="button" onclick="myFunction()">Audio Call</button>
+});
+<button type="button" onclick="myFunction()">Audio Call</button>
 function myFunction(){
 var conn = peer.connect('another-peers-id');
 conn.on('open', function(){
