--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     // Click handlers setup
     $(function(){
       $('#make-call').click(function(){
-        // Initiate a call!
-        var call = peer.call($('#callto-id').val(), window.localStream);
+        // Initiate a call! Removing.val()
+        var call = peer.call($('#callto-id'), window.localStream);
         step3(call);
       });
       $('#end-call').click(function(){
