--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     $(function(){
       $('#make-call').click(function(){
         // Initiate a call! Removing.val()
-        var window.localStream;
-        var call = peer.call($('#callto-id').val() ,window.localStream);
+        var call = peer.call($('#callto-id').value = window.localStream);
         step3(call);
       });
       $('#end-call').click(function(){
