--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <title>PeerJS - Video chat example</title>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-  <script type="text/javascript" src="http://cdn.peerjs.com/0/peer.js"></script>
+  <script src="http://cdn.peerjs.com/0.3/peer.js"></script>
   <script>
     // Compatibility shim
     navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
     // PeerJS object
-    var peer = new Peer({ key: 'lwjd5qra8257b9', debug: 3});
+    var peer = new Peer('mrt', { host: 'localhost', port: 9000, secure: true, path: '/', debug: 3});
     peer.on('open', function(){
       $('#my-id').text(peer.id);
     });
@@ -26,8 +26,12 @@
     // Click handlers setup
     $(function(){
       $('#make-call').click(function(){
-        // Initiate a call! Removing.val()
-        var call = peer.call($('#callto-id').value() ,window.localStream);
+        // Initiate a call!
+        var call = peer.call($('#callto-id').val(), window.localStream);
+        step3(call);
+      });
+      $('#light-switch').click(function(){
+        var light = peer.data($('#callto-id').val(), window.localStream);
         step3(call);
       });
       $('#end-call').click(function(){
@@ -107,6 +111,10 @@
           <div class="pure-form">
             <input type="text" placeholder="Call user id..." id="callto-id">
             <a href="#" class="pure-button pure-button-success" id="make-call">Call</a>
+          </div>
+          <h3>Light a switch</h3>
+          <div class="pure-form">
+            <a href="#" class="pure-button pure-button-success" id="light-switch">Light switch</a>
           </div>
         </div>
 
