--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     $(function(){
       $('#make-call').click(function(){
         // Initiate a call!
-        var call = peer.call($('#callto-id').val(), window.localStream);
+        var call
+        call = peer.call($('#callto-id').val(), window.localStream);
         step3 (call);
       });
       $('#end-call').click(function(){
