--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>PeerJS - Video chat example</title>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-  <script type="text/javascript" src="http://cdn.peerjs.com/0/peer.js"></script>
+  <script type="text/javascript" src="/dist/peer.js"></script>
   <script>
     // Compatibility shim
     navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
@@ -16,32 +16,31 @@
     peer.on('call', function(call){
       // Answer the call automatically (instead of prompting user) for demo purposes
       call.answer(window.localStream);
-      step3 (call);
+      step3(call);
     });
     peer.on('error', function(err){
       alert(err.message);
       // Return to step 2 if error occurs
-      step2 ();
+      step2();
     });
     // Click handlers setup
-    $(function()){
-      $('#make-call').click(function()){
+    $(function(){
+      $('#make-call').click(function(){
         // Initiate a call!
-        var call
-        call = peer.call($('#callto-id').val(), window.localStream);
-        step3 (call);
+        var call = peer.call($('#callto-id').val(), window.localStream);
+        step3(call);
       });
       $('#end-call').click(function(){
         window.existingCall.close();
-        step2 ();
+        step2();
       });
       // Retry if getUserMedia fails
       $('#step1-retry').click(function(){
         $('#step1-error').hide();
-        step1 ();
+        step1();
       });
       // Get things started
-      step1 ();
+      step1();
     });
     function step1 () {
       // Get audio/video stream
@@ -49,7 +48,7 @@
         // Set your video displays
         $('#my-video').prop('src', URL.createObjectURL(stream));
         window.localStream = stream;
-        step2 ();
+        step2();
       }, function(){ $('#step1-error').show(); });
     }
     function step2 () {
