--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       $('#step1, #step2').hide();
       $('#step3').show();
     }
-// Screenshare Code
+/* Screenshare Code
 <p align="center"><input type="button" id="share_screen" value="Share screen"/></p>
 	<p align="center"><video id="video" autoplay/></p>
 	<script language="javascript">
@@ -97,6 +97,7 @@
           	)
      	})
 	</script>
+	*/
   </script>
 
 
