--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                    	audio: false,
                    	video: {
                        	mandatory: {
-                           	chromeMediaSource: 'screen',
+                           	chooseDesktopMedia: 'screen',
                            	maxWidth: 1280,
                            	maxHeight: 720
                        	},
