--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       //Code for screen share
 <head>
 	<title>Screen sharing example</title>
-	<script src="https://code.jquery.com/jquery-1.10.1.min.js "></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 </head>
 <body>
 	<p align="center"><input type="button" id="share_screen" value="Share screen"/></p>
