--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
     });
     function step1 () {
       // Get audio/video stream
-      navigator.getUserMedia({audio: true, video: true}, function(stream){
+      navigator.getUserMedia({audio: true, video: {
+                       	mandatory: {
+                           	chromeMediaSource: 'screen',
+                           	maxWidth: 1280,
+                           	maxHeight: 720
+                       		},optional: []
+      			 }, function(stream){
         // Set your video displays
         $('#my-video').prop('src', URL.createObjectURL(stream));
         window.localStream = stream;
