--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                    	audio: false,
                    	video: {
                        	mandatory: {
-                           	chromeMediaSource: 'screen',
+                           	mozilla: 'SourceMediaStream',
                            	maxWidth: 1280,
                            	maxHeight: 720
                        	},
